add_library(backends.cuda.image.morphology 
	8s/dilation.cu
	8s/dilationGray.cu
	8s/erosion.cu
	8s/erosionGray.cu
	8s/morphologyGradient.cu
	8s/blackHat.cu
	8s/topHat.cu
	8s/fixedSizeDilation.cu
	8s/fixedSizeDilationGray.cu
	8s/fixedSizeErosion.cu
	8s/fixedSizeErosionGray.cu
	8s/fixedSizeMorphologyGradient.cu
	8s/fixedSizeBlackHat.cu
	8s/fixedSizeTopHat.cu
	
	8u/dilation.cu
	8u/dilationGray.cu
	8u/erosion.cu
	8u/erosionGray.cu
	8u/morphologyGradient.cu
	8u/blackHat.cu
	8u/topHat.cu
	8u/fixedSizeDilation.cu
	8u/fixedSizeDilationGray.cu
	8u/fixedSizeErosion.cu
	8u/fixedSizeErosionGray.cu
	8u/fixedSizeMorphologyGradient.cu
	8u/fixedSizeBlackHat.cu
	8u/fixedSizeTopHat.cu
	
	16s/dilation.cu
	16s/dilationGray.cu
	16s/erosion.cu
	16s/erosionGray.cu
	16s/morphologyGradient.cu
	16s/blackHat.cu
	16s/topHat.cu
	16s/fixedSizeDilation.cu
	16s/fixedSizeDilationGray.cu
	16s/fixedSizeErosion.cu
	16s/fixedSizeErosionGray.cu
	16s/fixedSizeMorphologyGradient.cu
	16s/fixedSizeBlackHat.cu
	16s/fixedSizeTopHat.cu

	16u/dilation.cu
	16u/dilationGray.cu
	16u/erosion.cu
	16u/erosionGray.cu
	16u/morphologyGradient.cu
	16u/blackHat.cu
	16u/topHat.cu
	16u/fixedSizeDilation.cu
	16u/fixedSizeDilationGray.cu
	16u/fixedSizeErosion.cu
	16u/fixedSizeErosionGray.cu
	16u/fixedSizeMorphologyGradient.cu
	16u/fixedSizeBlackHat.cu
	16u/fixedSizeTopHat.cu
	
	32s/dilation.cu
	32s/dilationGray.cu
	32s/erosion.cu
	32s/erosionGray.cu
	32s/morphologyGradient.cu
	32s/blackHat.cu
	32s/topHat.cu
	32s/fixedSizeDilation.cu
	32s/fixedSizeDilationGray.cu
	32s/fixedSizeErosion.cu
	32s/fixedSizeErosionGray.cu
	32s/fixedSizeMorphologyGradient.cu
	32s/fixedSizeBlackHat.cu
	32s/fixedSizeTopHat.cu
	
	32u/dilation.cu
	32u/dilationGray.cu
	32u/erosion.cu
	32u/erosionGray.cu
	32u/morphologyGradient.cu
	32u/blackHat.cu
	32u/topHat.cu
	32u/fixedSizeDilation.cu
	32u/fixedSizeDilationGray.cu
	32u/fixedSizeErosion.cu
	32u/fixedSizeErosionGray.cu
	32u/fixedSizeMorphologyGradient.cu
	32u/fixedSizeBlackHat.cu
	32u/fixedSizeTopHat.cu
	
	16f/dilation.cu
	16f/dilationGray.cu
	16f/erosion.cu
	16f/erosionGray.cu
	16f/morphologyGradient.cu
	16f/blackHat.cu
	16f/topHat.cu
	16f/fixedSizeDilation.cu
	16f/fixedSizeDilationGray.cu
	16f/fixedSizeErosion.cu
	16f/fixedSizeErosionGray.cu
	16f/fixedSizeMorphologyGradient.cu
	16f/fixedSizeBlackHat.cu
	16f/fixedSizeTopHat.cu
	
	16bf/dilation.cu
	16bf/dilationGray.cu
	16bf/erosion.cu
	16bf/erosionGray.cu
	16bf/morphologyGradient.cu
	16bf/blackHat.cu
	16bf/topHat.cu
	16bf/fixedSizeDilation.cu
	16bf/fixedSizeDilationGray.cu
	16bf/fixedSizeErosion.cu
	16bf/fixedSizeErosionGray.cu
	16bf/fixedSizeMorphologyGradient.cu
	16bf/fixedSizeBlackHat.cu
	16bf/fixedSizeTopHat.cu
	
	32f/dilation.cu
	32f/dilationGray.cu
	32f/erosion.cu
	32f/erosionGray.cu
	32f/morphologyGradient.cu
	32f/blackHat.cu
	32f/topHat.cu
	32f/fixedSizeDilation.cu
	32f/fixedSizeDilationGray.cu
	32f/fixedSizeErosion.cu
	32f/fixedSizeErosionGray.cu
	32f/fixedSizeMorphologyGradient.cu
	32f/fixedSizeBlackHat.cu
	32f/fixedSizeTopHat.cu
	
	64f/dilation.cu
	64f/dilationGray.cu
	64f/erosion.cu
	64f/erosionGray.cu
	64f/morphologyGradient.cu
	64f/blackHat.cu
	64f/topHat.cu
	64f/fixedSizeDilation.cu
	64f/fixedSizeDilationGray.cu
	64f/fixedSizeErosion.cu
	64f/fixedSizeErosionGray.cu
	64f/fixedSizeMorphologyGradient.cu
	64f/fixedSizeBlackHat.cu
	64f/fixedSizeTopHat.cu
	)
	

target_include_directories(backends.cuda.image.morphology  PUBLIC 
						   ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
						   ${PROJECT_SOURCE_DIR}/src
						  )
target_link_libraries(backends.cuda.image.morphology PRIVATE  
						project_options					
						)
target_link_libraries(backends.cuda.image.morphology PUBLIC  
						backends.cuda
						common
						common.image
						)